Go to http://github.com/plack/Plack/issues for the roadmap and known issues.

{{$NEXT}}

1.0037  2015-06-19 10:01:31 PDT
    [Improvements]
        - Lint: Support HTTP/2 in SERVER_PROTOCOL (kazuho) #511
        - Bump HTTP::Headers::Fast dependency #512

1.0036  2015-06-03 12:01:53 PDT
    [BUG FIXES]
        - Fix CGIBin test to not use CGI.pm #509

1.0035  2015-04-16 10:08:21 CEST
    [BUG FIXES]
        - Fixed parsing of empty query string pairs (aristotle) #500

    [IMPROVEMENTS]
        - Documentation updates for FCGI (otrosien) #494
        - Use HTTP::Headers::Fast in Plack::Request
        - Big performance optimizations on Plack::Util::header_* (aristotle) #498
        - Added .webm to Plack::MIME (marlencrabapple) #503
        - Use Cookie::Baker to bake cookies in Plack::Response (oalders)
        - reduced the size of distribution by making binary files smaller

1.0034  2015-02-02 21:42:42 CET
    [SECURITY]
        - Fixed a possible directory traversal with Plack::App::File on Win32 (sri)

    [IMPROVEMENTS]
        - Documentation improvements (timbunce, oalders, autarch, frioux)
        - Avoid warnings in Plack::App::WrapCGI (frioux)

1.0033  2014-10-23 12:33:18 PDT
    [BUG FIXES]
        - Lint: Fix error messages (fgabolde) #473
        - ErrorDocument: Reverse the $done filtering (nwellnhof) #474

    [IMPROVEMENTS]
        - StackTrace: Improve the accuracy of thrown exceptions in case where an excpetion
          is thrown in destructors (nwellnhof) #476

1.0032  2014-10-04 11:13:24 PDT
    [IMPROVEMENTS]
        - Support Server::Starter in FCGI handler (yuryu) #435
        - Various documentation fixes

1.0031  2014-08-01 13:19:14 PDT
    [SECURITY]
        - Plack::App::File would previously strip trailing slashes off
          provided paths. This in combination with the common pattern
          of serving files with Plack::Middleware::Static could allow
          an attacker to bypass a whitelist of generated files (avar) #446
